@@ -1,3 +1,6 @@
+/* This file is part of KeY - https://key-project.org
+ * KeY is licensed under the GNU General Public License Version 2
+ * SPDX-License-Identifier: GPL-2.0-only */
 package de.uka.ilkd.key.util.mergerule;
 
 import java.io.StringReader;
@@ -482,10 +485,8 @@ public class MergeRuleUtils {
             HashMap<Function, LogicVariable> replMap, Services services) {
         TermBuilder tb = services.getTermBuilder();
 
-        if (term.op() instanceof Function && ((Function) term.op()).isSkolemConstant()
+        if (term.op() instanceof Function constant && ((Function) term.op()).isSkolemConstant()
                 && (restrictTo == null || restrictTo.contains(term.op()))) {
-
-            Function constant = (Function) term.op();
 
             if (!replMap.containsKey(constant)) {
                 LogicVariable freshVariable = getFreshVariableForPrefix(
@@ -943,7 +944,7 @@ public class MergeRuleUtils {
         for (final Term t : cond1SpecificElems) {
             List<Term> distCandidates = cond2SpecificElems.stream()
                     .filter(t1 -> t1.equals(tb.not(t)) || t.equals(tb.not(t1)))
-                    .collect(Collectors.toList());
+                    .toList();
             if (!distCandidates.isEmpty()) {
                 // Just take the first, any one should be good enough, at least
                 // with the present knowledge
@@ -1117,7 +1118,7 @@ public class MergeRuleUtils {
 
         // This goal
         final Collection<Operator> thisGoalSymbols = new ArrayList<>();
-        final Goal thisGoal = proof.getGoal(mergeState.getCorrespondingNode());
+        final Goal thisGoal = proof.getOpenGoal(mergeState.getCorrespondingNode());
         final NamespaceSet thisGoalNamespaces = thisGoal.getLocalNamespaces();
         thisGoalSymbols.addAll(thisGoalNamespaces.programVariables().allElements());
         thisGoalSymbols.addAll(thisGoalNamespaces.functions().allElements());
@@ -1126,7 +1127,7 @@ public class MergeRuleUtils {
 
         // Partner goal
         final Collection<Operator> partnerGoalSymbols = new ArrayList<>();
-        final Goal partnerGoal = proof.getGoal(mergePartnerState.getCorrespondingNode());
+        final Goal partnerGoal = proof.getOpenGoal(mergePartnerState.getCorrespondingNode());
         final NamespaceSet partnerGoalNamespaces = partnerGoal.getLocalNamespaces();
         partnerGoalSymbols.addAll(partnerGoalNamespaces.programVariables().allElements());
         partnerGoalSymbols.addAll(partnerGoalNamespaces.functions().allElements());
@@ -1141,14 +1142,14 @@ public class MergeRuleUtils {
 
             final List<Operator> problematicOps =
                 partnerGoalSymbols.parallelStream().filter(pv -> thisGoalNames.contains(pv.name()))
-                        .filter(pv -> !thisGoalSymbols.contains(pv)).collect(Collectors.toList());
+                        .filter(pv -> !thisGoalSymbols.contains(pv)).toList();
 
             // Loop over all problematic operators and rename them in the
             // partner state.
             for (Operator partnerStateOp : problematicOps) {
                 final Operator mergeStateOp = thisGoalSymbols.parallelStream()
                         .filter(s -> s.name().equals(partnerStateOp.name()))
-                        .collect(Collectors.toList()).get(0);
+                        .toList().get(0);
 
                 Operator newOp1;
                 Operator newOp2;
@@ -1696,74 +1697,56 @@ public class MergeRuleUtils {
     }
 
     /**
-     *
      * TODO
      *
      * @author Dominic Scheurer
      */
-    private static class CommonAndSpecificSubformulasResult {
-        public final LinkedHashSet<Term> specific1, specific2, common;
-
-        public CommonAndSpecificSubformulasResult(LinkedHashSet<Term> specific1,
-                LinkedHashSet<Term> specific2, LinkedHashSet<Term> common) {
-            this.specific1 = specific1;
-            this.specific2 = specific2;
-            this.common = common;
-        }
+    private record CommonAndSpecificSubformulasResult(LinkedHashSet<Term> specific1,
+            LinkedHashSet<Term> specific2,
+            LinkedHashSet<Term> common) {
     }
 
     /**
-     * Simple term wrapper for comparing terms modulo renaming.
-     *
-     * @author Dominic Scheurer
-     * @see TermWrapperFactory
-     */
-    static class TermWrapper {
-        private final Term term;
-        private final int hashcode;
-
-        public TermWrapper(Term term, int hashcode) {
-            this.term = term;
-            this.hashcode = hashcode;
-        }
-
-        public Term getTerm() {
-            return term;
-        }
-
-        @Override
-        public boolean equals(Object obj) {
-            return obj instanceof TermWrapper
-                    && term.equalsModRenaming(((TermWrapper) obj).getTerm());
-        }
-
-        @Override
-        public int hashCode() {
-            return hashcode;
-        }
-
-        @Override
-        public String toString() {
-            return term.toString();
-        }
-
-        /**
-         * Adds the wrapped content of the Iterable object into the given target collection.
+         * Simple term wrapper for comparing terms modulo renaming.
          *
-         * @param target The collection to insert the wrapped terms into.
-         * @param wrappedCollection Iterable to transform.
-         * @return The target collection with inserted terms.
+         * @author Dominic Scheurer
+         * @see TermWrapperFactory
          */
-        public static <T extends Collection<Term>> T toTermList(T target,
-                Iterable<TermWrapper> wrappedCollection) {
+        record TermWrapper(Term term, int hashcode) {
 
-            for (TermWrapper termWrapper : wrappedCollection) {
-                target.add(termWrapper.getTerm());
+        @Override
+            public boolean equals(Object obj) {
+                return obj instanceof TermWrapper
+                        && term.equalsModRenaming(((TermWrapper) obj).term());
             }
 
-            return target;
+            @Override
+            public int hashCode() {
+                return hashcode;
+            }
+
+            @Override
+            public String toString() {
+                return term.toString();
+            }
+
+            /**
+             * Adds the wrapped content of the Iterable object into the given target collection.
+             *
+             * @param target            The collection to insert the wrapped terms into.
+             * @param wrappedCollection Iterable to transform.
+             * @return The target collection with inserted terms.
+             */
+            public static <T extends Collection<Term>> T toTermList(T target,
+                                                                    Iterable<TermWrapper> wrappedCollection) {
+
+                for (TermWrapper termWrapper : wrappedCollection) {
+                    target.add(termWrapper.term());
+                }
+
+                return target;
+            }
         }
-    }
 
     /**
      * Visitor for collecting program locations in a Java block.
@@ -1868,8 +1851,7 @@ public class MergeRuleUtils {
 
         @Override
         public ProgramVariable get(Object key) {
-            if (key instanceof LocationVariable) {
-                LocationVariable var = (LocationVariable) key;
+            if (key instanceof LocationVariable var) {
 
                 if (doNotRename.contains(var)) {
                     return var;
